# paratesting

./: .rustfmt.toml  Cargo.toml  README.md  main.js  package-lock.json  package.json  setup.js  test-runner.js
.github/workflows/: tests.yml
client/: Cargo.toml
client/src/: keys.rs  lib.rs
examples/cases/: case-a.yaml  case-test.yaml
metadata/: pontem-xcmp.scale  rococo-local.scale
nodes/: launch-config.json  pontem.scale
src/: error.rs  eval.rs  launcher.rs  logger.rs  main.rs  suit.rs
src/api/: mod.rs  pontem.rs
src/conditions/: cfg.rs  eval.rs  mod.rs
src/format/: launch.rs  mod.rs  suit.rs
src/setup/: mod.rs
src/task/: mod.rs  proc.rs
tests/assets/: stderr+stdout-mixed.yaml  stderr+stdout.sh  stderr-timed-ok.yaml  stdout-timed-ok.yaml  wait-fail.sh  wait-ok.sh  wait-stderr.sh  wait-stdout.sh
