[workspace]
members = [".", "client"]


[package]
name = "paratesting"
version = "0.1.0"
edition = "2021"
resolver = "2"


[dependencies]
# async-std = { version = "1.9", features = ["std", "attributes", "tokio1"] }
async-std = { version = "1.10", features = ["std", "attributes", "tokio1"] }
async-trait = "0.1"
futures = "0.3.13"
futures-lite = "1.12.0"

hex = "0.4.3"
subprocess = "0.2.8"
# TODO: remove this:
custom_error = "1.9.2"
thiserror = "1.0.30"

log = "0.4"


cel_parser = { package = "cel-parser", version = "0.2" }
cel-interpreter = { package = "cel-interpreter", version = "0.2" }
lalrpop = "=0.19.6"

# (de)serialize
serde_json = "1.0"
serde_yaml = "0.8"

#
# bin-dependencies:

# colourful error reports
color-eyre = "0.5"
# standard logger
env_logger = "0.9"
# standard logger used in gh-action environment
pretty_env_logger = "0.4"
# parse execution args to params
structopt = "0.3"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.yaml-merge-keys]
version = "0.4"
package = "yaml-merge-keys"
features = ["serde_yaml"]


# substrate #

[dependencies.client]
package = "paratesting-node-client"
path = "client"
default-features = false


[features]
default = [
	"runtime-pontem",
	"runtime-polkadot",
	"runtime-rococo",
	# "github"
]
github = []
runtime-pontem = ["client/runtime-pontem"]
runtime-polkadot = ["client/runtime-polkadot"]
runtime-rococo = ["client/runtime-rococo"]


[profile.dev.package.backtrace]
opt-level = 3
