[package]
name = "paratesting-node-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hex = "0.4.3"
thiserror = "1.0.30"


[dependencies.serde]
version = "1.0"
features = ["derive"]

# substrate

[dependencies.subxt]
git = "https://github.com/pontem-network/subxt.git"
rev = "bf05229dfa2238cf2629f9f49687862c730b24e5"

[dependencies.codec]
package = "parity-scale-codec"
version = "2.3"
default-features = false
# features = ["default", "std", "derive", "full", "bit-vec"]
features = ["derive", "full", "bit-vec"]

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
# rev = "3b2ce548c6e00183ab12ab086859325164263584"    # master

# [dependencies.sp-core]
# git = "https://github.com/paritytech/substrate.git"
# rev = "3b2ce548c6e00183ab12ab086859325164263584"    # master

# [dependencies.sp-runtime]
# git = "https://github.com/paritytech/substrate.git"
# rev = "3b2ce548c6e00183ab12ab086859325164263584"    # master


[features]
default = [
	"runtime-pontem",
	"runtime-polkadot",
	"runtime-rococo"
]
runtime-pontem = []
runtime-polkadot = []
runtime-rococo = []
runtime-custom = []
